--- a/exercícios/021/fundo005.html
+++ b/exercícios/021/fundo005.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
-            height: 98vh;
-            background-image: url("http://pm1.narvii.com/6582/164fc084c8544c6c1f639b89e6d43f7f02eccd8e_00.jpg");
-            background-repeat: no-repeat;   
-            background-size: 150px;
-            background-position: right bottom;
+            height: 97vh;
+            background-image: url("imagens/wallpaper003.jpg");
+            background-position: left right;
         }
     </style>
     <title>Posicionamento</title>
