--- a/exercícios/021/fundo006.html
+++ b/exercícios/021/fundo006.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
+            height: 100vh;
             background-color: #000;
             background-image: url("imagens/wallpaper002.jpg");
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
-            background-size: 1500px;
+            background-size: cover
         }
         main{
             background-color: white;
