--- a/exercícios/021/fundo006.html
+++ b/exercícios/021/fundo006.html
@@ -6,31 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: #000;
             background-image: url("imagens/wallpaper002.jpg");
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover
+            background-size: cover;
+            background-attachment: fixed;*/
+            background: #000 url("imagens/wallpaper002.jpg") center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
             padding: 10px;
-            width: 400px;
+            max-width: 400px;
             border: 1px solid #000;
             border-radius: 10px;
             margin: auto;
         }
     </style>
-    <title></title>
+    <title>Fundo fixo de tela</title>
 </head>
 <body>
     <main>
     <h1>Teste de imagem de fundo</h1>
     <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus soluta vero maxime earum modi quisquam ad saepe corrupti, aliquid animi voluptatum pariatur voluptatibus dolor ipsam veniam similique fugiat officia?
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi minus soluta vero maxime earum modi quisquam ad saepe corrupti, aliquid animi voluptatum pariatur voluptatibus dolor ipsam veniam similique fugiat officia?</p>
+    <p>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate expedita reprehenderit minima quas omnis, cumque nostrum saepe illum architecto dolorum nihil pariatur unde quia aliquid. Quos fuga nobis recusandae illum.
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam error quos debitis nesciunt veniam perspiciatis voluptatem facilis, amet velit sequi corporis. Aut repellat fugit consequuntur magnam sed magni recusandae facere.
+    </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam qui molestias animi delectus culpa quam consequuntur quidem reprehenderit, quasi et illum, nam soluta. At ipsa et ut, autem excepturi maiores.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, quae tenetur. Libero sequi in debitis possimus a asperiores molestiae nulla accusantium cum ullam error, saepe accusamus ipsam officiis fugit doloribus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id repellat illo alias adipisci numquam? Aspernatur voluptatum voluptas totam recusandae. Doloremque eveniet, laudantium qui eaque quidem temporibus aut sint quas ipsa.</p>
     </p>
     </main>
 </body>
