--- a/desafios/004/index.html
+++ b/desafios/004/index.html
@@ -56,7 +56,7 @@
      </section>
     
 
-    <section class="imagem">
+    <section class="imagem" id="segunda">
         <p>
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
