--- a/exercícios/022/tabela01.html
+++ b/exercícios/022/tabela01.html
@@ -10,11 +10,17 @@
         }
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
         td{
             border: 1px solid #000;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+        }
+        .numero{
+            text-align: right;
         }
     </style>
     <title>Tabelas</title>
@@ -30,7 +36,7 @@
     -->
     <table>
         <tr> <!--Primeira linha-->
-            <td>A1</td>
+            <td class="numero">A1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
