--- a/exercícios/022/tabela004.html
+++ b/exercícios/022/tabela004.html
@@ -46,15 +46,15 @@
 
         <thead>
             <tr>
-                <th>Grupos</th>
-                <th>Nomes</th>
-                <th colspan="3n">Filmes</th>
+                <th scope="col">Grupos</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3n" scope= "colgroup">Filmes</th>
             </tr>
         </thead>
 
         <tbody>
             <tr>
-                <th rowspan="3n">Mulheres</th>
+                <th rowspan="3n" scope= "rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Ranbo</td>
@@ -76,7 +76,7 @@
             </tr>
 
             <tr>
-                <th rowspan="3n">Homens</th>
+                <th rowspan="3n" scope="rowgroup">Homens</th>
                 
                     <td>Bruno Mendonça</td>
                     <td>Intocáveis</td>
