--- a/desafios/006/index.html
+++ b/desafios/006/index.html
@@ -4,9 +4,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        table{
+            font-family: Arial, Helvetica, sans-serif;
+            width: 900px;
+            border-collapse: collapse;
+        }
+        th,td{
+            padding: 10px;
+            border: 1px solid #000;
+            text-align: center;
+            font-size: 1.1em;
+        }
+        th{
+            background-color: #4b4b4b;
+            color: #fff;
+        }
+        th.exatas{
+            color: #000;
+            background-color: #fff;
+            font-weight: bolder;
+            font-size: 1.2em;
+        }
+        th.humanas{
+            color: #000;
+            background-color: #fff;
+            font-weight: bolder;
+            font-size: 1.2em;
+        }
+        td{
+            font-weight: bold;
+        }
+    </style>
     <title>Desafio parte 2</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th rowspan="2n">Área</th>
+            <th rowspan="2n">Disciplinas</th>
+            <th colspan="2n">Notas</th>
+            <th rowspan="2n">Média</th>
+        </tr>
+
+        <tr>
+            <th>Nota 1</th>
+            <th>Nota 2</th>
+        </tr>
+
+        <tr>
+            <th rowspan="4n" class="exatas">Exatas</th>
+            <td>Matemática</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <td>Física</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <td>Química</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <td>Biología</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <th colspan="4n">Média de Exatas</th>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <th rowspan="2n" class="humanas">Humanas</th>
+            <td>História</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <td>Geografia</td>
+            <td>0.0</td>
+            <td>0.0</td>
+            <td>0.0</td>
+        </tr>
+
+        <tr>
+            <th colspan="4n">Média de Humanas</th>
+            <td>0.0</tr>
+        </tr>
+    </table>
 </body>
 </html>
