--- a/desafios/007/index.html
+++ b/desafios/007/index.html
@@ -20,5 +20,17 @@
             </section>
         </nav>
     </header>
+
+    <main>
+        <section id="section-inicio">
+            <div id="div-inicio">
+                <div>
+                    <h2>Flight</h2>
+                    <h2>Hotel</h2>
+                    <h2>Rendal</h2>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
