--- a/exercícios/023/iframe02.html
+++ b/exercícios/023/iframe02.html
@@ -10,5 +10,7 @@
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
         Fugiat molestias illo eligendi, tempore natus impedit consectetur qui <br> obcaecati, reiciendis dolorum, cupiditate repellendus dicta excepturi enim asperiores possimus provident cum eos?</p>
        
-       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptatibus, non quibusdam ipsa voluptatum error eos voluptate, cupiditate fuga dolorum adipisci unde iusto reiciendis autem quo esse dolores dignissimos debitis?</p>
+       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet voluptatibus, non quibusdam ipsa <br> voluptatum error eos voluptate, cupiditate fuga dolorum adipisci unde iusto reiciendis autem quo esse dolores dignissimos debitis?</p>
+
+       <iframe src="pagina001.html" frameborder="0"></iframe>
 </html>
