--- a/desafios/009/index.html
+++ b/desafios/009/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main>
-        <section id="celular">
+        <section id="telefone">
         </section>
-        <section id="sociais">
+        <section id="redes-sociais">
 
         </section>
     </main>
