--- a/exercícios/024/form007.html
+++ b/exercícios/024/form007.html
@@ -9,10 +9,11 @@
     <h1>Exemplo de formulário</h1>
     <label for="iestado">Estado</label>
     <select name="estado" id="iestado">
-        <option value="SP">São Paulo</option>
+        <option value="SP" selected>São Paulo</option>
         <option value="RJ">Rio de Janeiro</option>
         <option value="MG">Minas Gerais</option>
         <option value="SA">Santa Catarina</option>
     </select>
+    <input type="submit" value="Enviar >">
 </body>
 </html>
