--- a/exercícios/027/index.html
+++ b/exercícios/027/index.html
@@ -25,8 +25,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
+            gap: 2rem;
             width: 350px;
-            height: 200px;
+            height: 250px;
             overflow: hidden;
         }
 
@@ -102,12 +104,83 @@
                 transform: translateY(10px);
             }
         }
+        .c-loader{
+            width: 50px;
+            height: 50px;
+            border: 6px solid #ffffff;
+            border-top-color: #0000008b;
+            border-radius: 50%;
+            animation: is-rotating 1s infinite;
+        }
+
+        @keyframes is-rotating{
+            100%{
+                transform: rotate(1turn);
+            }
+        }
+
+        button.btn-animated{
+            position: relative;
+            width: 150px;
+            height: 60px;
+            border: 0;
+            text-align: center;
+            background-color: #000000;
+            border-radius: 5px;
+            color: #ffffff;
+            font-size: 18px;
+            font-weight: 600;
+            font-family: 'JetBrain', monospace;
+            cursor: pointer;
+        }
+
+        button.btn-animated::after{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border: #000000 solid 9px;
+        }
+
+        .btn-animated:hover::after,  button.btn-animated:focus::after{
+            animation: is-panning 1.75s cubic-bezier(0.33, 1, 0.68,1) infinite;
+        }
+
+        .btn-animated:active::after{
+            animation: none;
+        }
+
+        @keyframes is-panning{
+            to{
+               opacity: 0;
+               transform: scale(1.15, 1.5); 
+            }
+        }
+
+        @keyframes has-show{
+            from{
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to{
+                opacity: 1;
+                transform: translate(none);
+            }
+        }
+
+        .has-show{
+            animation: has-show .8s ease-in-out forwards;
+        }
     </style>
     <title>Meadias Features</title>
 </head>
 <body>
     <div class="text-reveal">
-        <h1>Eu te amo Arila</h1>
+        <h1 class="has-show">Hello, world</h1>
+        <div class="c-loader has-show"></div>
+        <button class="btn-animated has-show">Quero fazer</button>
     </div>
         <div class="div-footer">
             <button>
